--- a/app/src/main/res/layout/fragment_profile_team_basic.xml
+++ b/app/src/main/res/layout/fragment_profile_team_basic.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
       <androidx.cardview.widget.CardView
           android:background="@color/white"
           app:cardCornerRadius="10dp"
